--- a/the_weekend.html
+++ b/the_weekend.html
@@ -5,44 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Mattéo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Header logo and sommaire -->
     <header>
         <img src="assets/logo_ms.jpg" alt="texte" width="158" height="158"><!-- list of prestation's -->
-        <h1>The weekend</h1>
+        <h1 class="textcenter">The weekend</h1>
         <img src="assets/the_weekend_portrait.jpg" alt="" width="158" height="170">
-        <ul>
-            <li><a href="#bio" >Biographie</a></li>
-            <li><a href="#top_titre">Top titre</a></li>
-            <li><a href="#derniere_sortie">dernières sorties</a></li>
-            <li><a href="#albums">Albums</a></li>
-            <li><a href="#artistes_similaires">Artiste similaire</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#bio">Biographie</a></li>
+                <li><a href="#top_titre">Top titre</a></li>
+                <li><a href="#derniere_sortie">dernières sorties</a></li>
+                <li><a href="#albums">Albums</a></li>
+                <li><a href="#artistes_similaires">Artiste similaire</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <article>
-            <h2 id="bio">Biographie</h2>
-            <p><strong>The weekend</strong> est un <em>artiste auteur compositeur canadien</em></p>
-        </article>
+        <!-- Biographie -->
         <section>
             <article>
+                <h2 id="bio" class="textcenter">Biographie</h2>
+                <p class="textcenter"><strong>The weekend</strong> est un <em>artiste auteur compositeur canadien</em></p>
+            </article>
+        </section>
+        <!-- list without link -->
+        <section>
+            <div>
                 <h3 id="top_titre">Top titre</h3>
                 <ol>
                     <li>Timeless</li>
                     <li>One of the girl</li>
                     <li>Bliding light</li>
                 </ol>
-            </article>
-            <article>
+            </div>
+            <div>
                 <h3 id="derniere_sortie">Dernière sorties</h3>
                 <ul>
                     <li>Timeless</li>
                     <li>Dancing in the flames</li>
                     <li>Popular</li>
                 </ul>
-            </article>
-            <article>
+            </div>
+        </section>
+        <!-- Album, list with link out of the site -->
+        <section>
+            <div>
                 <h3 id="albums">Albums</h3>
                 <ul>
                     <li>Starboy</li>
@@ -51,20 +62,27 @@
                     </a>
                     <p>Sortie en 2023</p>
                     <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ" target="_blank">Ecoutez ici</a>
-                    <li>Dawn</li>
-                    <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ" target="_blank">
-                        <img src="assets/album_dawn.jpeg" alt="" width="158" height="158">
-                    </a>
-                    <p>Sortie en 2022</p>
-                    <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ">Ecoutez ici</a>
-                    <li>After Hours</li>
-                    <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ" target="_blank">
-                        <img src="assets/album_after_hours.jpeg" alt="" width="158" height="158">
-                    </a>
-                    <p>sortie en 2020</p>
-                    <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ">Ecoutez ici</a>
+            </div>
+            <div>
+                <li>Dawn</li>
+                <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ" target="_blank">
+                    <img src="assets/album_dawn.jpeg" alt="" width="158" height="158">
+                </a>
+                <p>Sortie en 2022</p>
+                <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ">Ecoutez ici</a>
+            </div>
+            <div>
+                <li>After Hours</li>
+                <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ" target="_blank">
+                    <img src="assets/album_after_hours.jpeg" alt="" width="158" height="158">
+                </a>
+                <p>sortie en 2020</p>
+                <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ">Ecoutez ici</a>
                 </ul>
-            </article>
+            </div>
+        </section>
+        <!-- Similar artists, list with link on the site -->
+        <section>
             <h3 id="artistes_similaires">Artistes similaires</h3>
             <ul>
                 <li><a href="doja_cat.html" target="_blank">Doja Cat</a></li>
@@ -72,24 +90,27 @@
                 <li>Sza</li>
             </ul>
         </section>
+        <!-- all iframe -->
+        <section>
         <div>
             <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/460014432&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/larevuedespodcasts" title="La Revue des Podcasts" target="_blank"
-                    style="color: #cccccc; text-decoration: none;">La Revue des Podcasts</a> · <a
-                    href="https://soundcloud.com/larevuedespodcasts/lrdp-09-la-diagonale-du-vide"
-                    title="LRdP#9 La Diagonale du vide" target="_blank"
-                    style="color: #cccccc; text-decoration: none;">LRdP#9 La
-                    Diagonale du vide</a>
-            </div>
-            <iframe src="https://fr.wikipedia.org/wiki/The_Weeknd" frameborder="0"></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/sFs1AunzMzw?si=1gTiQ1BpwSpSoJS0"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space:
+            nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida
+            Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/larevuedespodcasts" title="La Revue des Podcasts" target="_blank"
+                style="color: #cccccc; text-decoration: none;">La Revue des Podcasts</a> · <a
+                href="https://soundcloud.com/larevuedespodcasts/lrdp-09-la-diagonale-du-vide"
+                title="LRdP#9 La Diagonale du vide" target="_blank"
+                style="color: #cccccc; text-decoration: none;">LRdP#9 La
+                Diagonale du vide</a>
         </div>
+        <iframe src="https://fr.wikipedia.org/wiki/The_Weeknd" frameborder="0"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sFs1AunzMzw?si=1gTiQ1BpwSpSoJS0"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
     </main>
     <footer>
         <p><a href="index.html" target="_blank">Accueil</a></p>
