--- a/the_weekend.html
+++ b/the_weekend.html
@@ -11,8 +11,10 @@
 <body>
     <!-- Header logo and sommaire -->
     <header>
-        <img src="assets/logo_ms.jpg" alt="texte" width="158" height="158"><!-- list of prestation's -->
-        <h1 class="textcenter">The weekend</h1>
+        <div>
+            <img src="assets/logo_ms.jpg" alt="texte" class="banner"><!-- list of prestation's -->
+        </div>
+        <h1>The weekend</h1>
         <img src="assets/the_weekend_portrait.jpg" alt="" width="158" height="170">
         <nav>
             <ul>
@@ -28,14 +30,15 @@
         <!-- Biographie -->
         <section>
             <article>
-                <h2 id="bio" class="textcenter">Biographie</h2>
-                <p class="textcenter"><strong>The weekend</strong> est un <em>artiste auteur compositeur canadien</em></p>
+                <h2 id="bio" class="backbigtitle">Biographie</h2>
+                <p class="textcenter"><strong>The weekend</strong> est un <em>artiste auteur compositeur canadien</em>
+                </p>
             </article>
         </section>
         <!-- list without link -->
         <section>
             <div>
-                <h3 id="top_titre">Top titre</h3>
+                <h3 id="top_titre" class="backbigtitle">Top titre</h3>
                 <ol>
                     <li>Timeless</li>
                     <li>One of the girl</li>
@@ -43,7 +46,7 @@
                 </ol>
             </div>
             <div>
-                <h3 id="derniere_sortie">Dernière sorties</h3>
+                <h3 id="derniere_sortie" class="backbigtitle">Dernière sorties</h3>
                 <ul>
                     <li>Timeless</li>
                     <li>Dancing in the flames</li>
@@ -54,7 +57,7 @@
         <!-- Album, list with link out of the site -->
         <section>
             <div>
-                <h3 id="albums">Albums</h3>
+                <h3 id="albums" class="backbigtitle">Albums</h3>
                 <ul>
                     <li>Starboy</li>
                     <a href="https://www.youtube.com/channel/UC0WP5P-ufpRfjbNrmOWwLBQ" target="_blank">
@@ -83,7 +86,7 @@
         </section>
         <!-- Similar artists, list with link on the site -->
         <section>
-            <h3 id="artistes_similaires">Artistes similaires</h3>
+            <h3 id="artistes_similaires" class="backbigtitle">Artistes similaires</h3>
             <ul>
                 <li><a href="doja_cat.html" target="_blank">Doja Cat</a></li>
                 <li>Swae Lee</li>
@@ -92,24 +95,25 @@
         </section>
         <!-- all iframe -->
         <section>
-        <div>
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/460014432&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space:
-            nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida
-            Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-            <a href="https://soundcloud.com/larevuedespodcasts" title="La Revue des Podcasts" target="_blank"
-                style="color: #cccccc; text-decoration: none;">La Revue des Podcasts</a> · <a
-                href="https://soundcloud.com/larevuedespodcasts/lrdp-09-la-diagonale-du-vide"
-                title="LRdP#9 La Diagonale du vide" target="_blank"
-                style="color: #cccccc; text-decoration: none;">LRdP#9 La
-                Diagonale du vide</a>
-        </div>
-        <iframe src="https://fr.wikipedia.org/wiki/The_Weeknd" frameborder="0"></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/sFs1AunzMzw?si=1gTiQ1BpwSpSoJS0"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div>
+                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/460014432&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow:
+                hidden;white-space:
+                nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida
+                Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                <a href="https://soundcloud.com/larevuedespodcasts" title="La Revue des Podcasts" target="_blank"
+                    style="color: #cccccc; text-decoration: none;">La Revue des Podcasts</a> · <a
+                    href="https://soundcloud.com/larevuedespodcasts/lrdp-09-la-diagonale-du-vide"
+                    title="LRdP#9 La Diagonale du vide" target="_blank"
+                    style="color: #cccccc; text-decoration: none;">LRdP#9 La
+                    Diagonale du vide</a>
+            </div>
+            <iframe src="https://fr.wikipedia.org/wiki/The_Weeknd" frameborder="0"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sFs1AunzMzw?si=1gTiQ1BpwSpSoJS0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
     </main>
     <footer>
